--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,6 @@
 MONGO_URI=mongodb+srv://bikramsarkar8240:Bikram3369@bikram3369.nljupko.mongodb.net/job-application?retryWrites=true&w=majority
 PORT= 8000
 SECRET_KEY=hdbkcsahkcshdhjs
+CLOUD_NAME=dxgvcvk3t
+API_KEY=356611251856387
+API_SECRET=wk4PcGlvyE6FTil0pA4Rd9jVgQA
